Page MenuHome GnuPG

Public key URL cannot be cleared on ZeitControl OpenPGP v3.4 card
Testing, NormalPublic

Description

The URL field on smartcards cannot be cleared (it works for the name field).

To reproduce:

  1. Open Smartcards Dialog (in Kleopatra)
  2. Add an URL
  3. Edit the URL, clear the text, OK => Error

Kleopatra simply sends SCD SETATTR PUBKEY-URL to gpg-agent which fails with "Card error" (code: 108, source: SCD).

Details

Version
gpg4win-5.0.0-beta395 @ win11

Event Timeline

timegrid created this object with edit policy "Contributor (Project)".

This works fine with my Yubikey. Maybe it's depends on the specific type of smartcard. What type of card are you using?

Please attach scdaemon logs (created with debug ipc,cardio)

I could reproduce this with a ZeitControl OpenPGP v3.4 card, but (as Tobias) not with an (old) Yubikey. Looks like a bug in the card firmware.

ikloecker renamed this task from Kleopatra: Card URL cannot be cleared to Public key URL cannot be cleared on ZeitControl OpenPGP v3.4 card.Oct 30 2025, 10:06 AM
ikloecker updated the task description. (Show Details)

Note: It works with gpg-card url --clear.

ikloecker added a project: kleopatra.

So we need to find out what gpg-card url --clear does to avoid the card error for the ZeitControl cards.

ikloecker mentioned this in Unknown Object (Maniphest Task).Nov 3 2025, 9:01 AM

That's what gpg-card url --clear does

if (!strcmp (argstr, "--clear"))
  url = xstrdup (" "); /* No real way to clear; set to space instead. */
werner triaged this task as Normal priority.Nov 3 2025, 5:08 PM

I'm fixing this in Kleopatra similarly to gpg-card.

ikloecker changed the task status from Open to Testing.Nov 4 2025, 9:39 AM
ikloecker moved this task from Backlog to WIP on the gpd5x board.

Fixed.

ikloecker mentioned this in Unknown Object (Maniphest Task).Nov 10 2025, 9:01 AM

Looks good to me on gpg4win-5.0.0-beta413 @ win11: