Add helper to escape smartcard attribute values

We need to percent-plus-escape values we want to set with scdaemon's
SETATTR command.

GnuPG-bug-id: 7881